--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seneca-solver"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 
 [dependencies]
@@ -13,3 +13,4 @@ serde_json = "1.0.137"
 copypasta = "0.10.1"
 url = "2.5.4"
 indicatif = "0.17.9"
+regex = "1.11.1"
