--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 chrono = "0.4.39"
 inquire = "0.7.5"
 rand = "0.8.5"
-reqwest = { version = "0.12.12", features = ["gzip", "brotli", "deflate", "json"] }
+reqwest = { version = "0.12.12", features = ["gzip", "brotli", "deflate", "json", "native-tls-vendored"] }
 tokio = { version = "1.43.0", features = ["full"] }
 serde_json = "1.0.137"
 copypasta = "0.10.1"
